--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,7 +1,16 @@
 figure {
-    text-align: center;
+  text-align: center;
 }
 
 .genreCard * {
-    text-align: left;
+  text-align: left;
+}
+
+button {
+  color: white;
+  background-color: goldenrod;
+}
+button:hover {
+  color: goldenrod;
+  background-color: white;
 }
